--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,24 @@ dependencies:
   flutter_riverpod: ^2.4.4
   dio: ^5.3.3
   floor: ^1.4.2
+  dartz: ^0.10.1
   shared_preferences: ^2.2.2
-
+  retrofit: '>=4.0.0 <5.0.0'
+  logger: ^2.0.2+1
+  json_annotation: ^4.8.1
+  pretty_dio_logger: ^1.3.1
+  get_it: ^7.6.4
+  fluttertoast: ^8.2.2
+  dio_cache_interceptor: ^3.4.4
+  transparent_image: ^2.0.1
+  flutter_localizations:
+    sdk: flutter
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  retrofit_generator: '>=7.0.0 <8.0.0'
+  build_runner: '>=2.3.0 <4.0.0'
+  json_serializable: ^6.6.2
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -57,7 +69,8 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
   assets:
-   - imgs/
+    - assets/imgs/
+    - assets/translations/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
