--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,8 @@ dev_dependencies:
 
   flutter_test:
     sdk: flutter
-
+  integration_test:
+    sdk: flutter
   hive_generator: ^2.0.1
 
   riverpod_generator: ^2.3.5
